--- a/slides-FR.html
+++ b/slides-FR.html
@@ -32,7 +32,7 @@
         
         <h2><br>Télécharger & Installer</h2>
         <ol class="downloads">
-          <li>Fichiers des apprenantes (zip): <a href="https://www.dropbox.com/sh/8bir6pb36eqtog1/AACWbevW59mnwoPgT3Oud7w6a?dl=0">bit.ly/llc-responsive</a>
+          <li>Fichiers des apprenantes (zip): <a href="https://github.com/ladieslearningcode/llc-responsive-design-FR/archive/master.zip">bit.ly/llc-responsive-fr</a>
             <ul>
               <!-- <li>Décompressez les fichiers de l'apprenant(<em>extraire tous</em> si vous êtes sur PC)</li> -->
               <li>Ouvrez <strong>slides-FR.html</strong> dans votre navigateur pour voir les diapos</li>
